デザイン変更

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,4 @@
-E“o˜^Šm”F‰æ–Ê‚ÌƒƒbƒZ[ƒW
-E•ÏXŠm”F‰æ–Ê‚ÌƒƒbƒZ[ƒW
-EíœŠm”F‰æ–Ê‚ÌƒƒbƒZ[ƒW
-E“o˜^“ü—Í‰æ–Ê‚ÌƒoƒŠƒf[ƒVƒ‡ƒ“
-E•ÏX“ü—Í‰æ–Ê‚ÌƒoƒŠƒf[ƒVƒ‡ƒ“
-E“o˜^Šm”F‰æ–Ê‚ÌƒoƒŠƒf[ƒVƒ‡ƒ“
-E•ÏXŠm”F‰æ–Ê‚ÌƒoƒŠƒf[ƒVƒ‡ƒ“
+ãƒ»ç™»éŒ²ç¢ºèªç”»é¢ã®ãƒ‡ã‚¶ã‚¤ãƒ³
+ãƒ»å¤‰æ›´å…¥åŠ›ç”»é¢ã®ãƒ‡ã‚¶ã‚¤ãƒ³
+ãƒ»å¤‰æ›´ç¢ºèªç”»é¢ã®ãƒ‡ã‚¶ã‚¤ãƒ³
+ãƒ»é …ç›®e-mailã‚’è¿½åŠ 
