--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+・ログインの実装（DBへの照会。今回パスワードは考慮しない）
+・ログインユーザ情報をセッションに保持する
+・各画面でログイン判定を入れる。ログインしていない場合はログイン画面へ
+
 ・項目e-mailを追加
 ・項目生年月日を追加
 ・ボタンとリンクが入り混じっている画面がある。ボタンに統一する。
